--- a/src/app/components/aircrafts/aircrafts.component.html
+++ b/src/app/components/aircrafts/aircrafts.component.html
@@ -1,12 +1,5 @@
 <div>
-    <ul class="navbar navbar-nav">
-        <li><button class="btn btn-outline-info m-2" (click)="getAllCrafts()">Aircrafts</button></li>
-        <li><button class="btn btn-outline-info m-2" (click)="getDesignedAircrafts()">Design</button></li>
-        <li><button class="btn btn-outline-info m-2" (click)="getDeveloppementAircrafts()">Développement</button></li>
-    </ul>
-    <ng-container *ngIf="error">
-        <div class="p-2 text-danger">{{error}}</div>
-    </ng-container>
+    <app-aircrafts-navbar (eventEmitter)="onActionEvent($event)"></app-aircrafts-navbar>
     <ng-container *ngIf="aircrafts$ | async as result" [ngSwitch]="result.dataState">
         <ng-container *ngSwitchCase="dataStateEnum.LOADING">
             <div class="p-2">Chargement en cours, patienter</div>
