--- a/src/app/components/aircrafts/aircrafts-navbar/aircrafts-navbar.component.html
+++ b/src/app/components/aircrafts/aircrafts-navbar/aircrafts-navbar.component.html
@@ -5,9 +5,9 @@
         <li class="nav-item active"><button class="btn btn-outline-info m-2" (click)="getDesignedAircrafts()">Design</button></li>
         <li class="nav-item active"><button class="btn btn-outline-info m-2" (click)="getDeveloppementAircrafts()">Développement</button></li>
     </ul>
-    <form #f="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="onSearch(f.value)">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" ngModel name="search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    <form class="form-inline my-2 my-lg-0" (ngSubmit)="onSearch(value)">
+        <input class="form-control mr-sm-2" type="text" name="search" [(ngModel)]="value">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Rechercher</button>
     </form>
     </div>
 </nav>
