--- a/src/app/components/aircrafts/aircrafts.component.html
+++ b/src/app/components/aircrafts/aircrafts.component.html
@@ -1,28 +1,31 @@
 <div>
-    <app-aircrafts-navbar (eventEmitter)="onActionEvent($event)"></app-aircrafts-navbar>
-    <ng-container *ngIf="aircrafts$ | async as result" [ngSwitch]="result.dataState">
-        <ng-container *ngSwitchCase="dataStateEnum.LOADING">
-            <div class="p-2">Chargement en cours, patienter</div>
+    <app-aircrafts-navbar></app-aircrafts-navbar>
+    <ng-container *ngIf="aircraftsState$ | async as state" [ngSwitch]="state.dataState">
+        <ng-container *ngSwitchCase="aircraftsStateEnum.INITIAL">
+            <div class="p-2">Initial State</div>
         </ng-container>
-        <ng-container *ngSwitchCase="dataStateEnum.LOADED">
-            <div class="p-2">Chargé</div>
+        <ng-container *ngSwitchCase="aircraftsStateEnum.LOADING">
+            <div class="p-2">Chargement</div>
         </ng-container>
-        <ng-container *ngSwitchCase="dataStateEnum.ERROR">
-            <div class="p-2 text-danger">{{result.errorMessage}}</div>
+        <ng-container *ngSwitchCase="aircraftsStateEnum.ERROR">
+            <div class="p-2 text-dander">{{state.errorMessage}}</div>
         </ng-container>
-        <table class="table striped">
-            <tr>
-                <th>ID</th>
-                <th>Program</th>
-                <th>Design</th>
-                <th>Developement</th>
-            </tr>
-            <tr *ngFor="let aircraft of result.data">
-                <td>{{aircraft.id}}</td>
-                <td>{{aircraft.prog}}</td>
-                <td>{{aircraft.design}}</td>
-                <td>{{aircraft.development}}</td>
-            </tr>
-        </table>
+
+        <ng-container *ngSwitchCase="aircraftsStateEnum.LOADED">
+            <table class="table">
+                <tr>
+                    <th>ID</th>
+                    <th>Program</th>
+                    <th>Design</th>
+                    <th>Developement</th>
+                </tr>
+                <tr *ngFor="let aircraft of state.aircrafts">
+                    <td>{{aircraft.id}}</td>
+                    <td>{{aircraft.prog}}</td>
+                    <td>{{aircraft.design}}</td>
+                    <td>{{aircraft.development}}</td>
+                </tr>
+            </table>
+        </ng-container>
     </ng-container>
 </div>
